# game

./: .clang-format  CMakeLists.txt  README.md  fragment.shader  glfw_wrapper.hpp  guidelines.md  guidelines.txt  load_bmp.cpp  load_obj.cpp  main.cpp  math.cpp  math.hpp  read_images.cpp  read_images.hpp  tasks.md  tasks.txt  vertex.shader
png_test/: CMakeLists.txt  read_images.cpp
